--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~49.0.15",
+    "expo-image-picker": "~14.3.2",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "expo-image-picker": "~14.3.2"
+    "react-native-paper": "^5.11.4",
+    "react-native-safe-area-context": "^4.6.3",
+    "react-native-screens": "~3.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
