--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/ngrok": "^4.1.3",
     "@react-native-async-storage/async-storage": "1.18.2",
     "expo": "~49.0.15",
     "expo-image-picker": "~14.3.2",
+    "expo-location": "~16.1.0",
+    "expo-sqlite": "~11.3.3",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-maps": "1.7.1",
     "react-native-paper": "^5.11.4",
     "react-native-safe-area-context": "^4.6.3",
-    "react-native-screens": "~3.22.0",
-    "expo-sqlite": "~11.3.3",
-    "expo-location": "~16.1.0",
-    "react-native-maps": "1.7.1"
+    "react-native-screens": "~3.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
